@@ -40,12 +40,18 @@
 /*
  * 'data' which is malloc'ed for XCreateImage() in pixbuf_to_ximage_truecolor()
  * is free'ed in XDestroyImage().
- * If malloc is replaced kik_mem_malloc in kik_mem.h, kik_mem_free_all() will
- * free 'data' which is already free'ed in XDestroyImage() and
- * segmentation fault error can happen.
  */
-#if  defined(KIK_DEBUG) && defined(malloc)
-#undef malloc
+#ifdef  KIK_DEBUG
+static void
+destroy_image(
+	XImage *  image
+	)
+{
+	kik_mem_remove(image->data , __FILE__ , __LINE__ , __FUNCTION__) ;
+	XDestroyImage(image) ;
+}
+#undef  XDestroyImage
+#define  XDestroyImage(image)  destroy_image(image)
 #endif
 
 #if  1
